adjusting for new theme

--- a/content/journal/01.md
+++ b/content/journal/01.md
@@ -3,7 +3,7 @@ title: The beginning I have
 date: "2020-05-28"
 description:
 language: english
-layout: post
+layout: single
 category: blog
 tags:
   - metawriting
