--- a/content/journal/02.md
+++ b/content/journal/02.md
@@ -2,7 +2,7 @@
 date: "2020-06-01"
 description:
 language: english
-layout: post
+layout: single
 title: Late is better than never!
 tags:
   - metawriting
