--- a/content/journal/05.md
+++ b/content/journal/05.md
@@ -2,7 +2,7 @@
 date: "2020-06-19"
 description:
 language: english
-layout: post
+layout: single
 tags:
   - metawriting
 title: It's gonna be a long, long time 🎵
