--- a/content/journal/04.md
+++ b/content/journal/04.md
@@ -2,7 +2,7 @@
 date: "2020-06-04"
 description:
 language: english
-layout: post
+layout: single
 tags:
   - metawriting
 title: First Accomplishment
