trying to fix bug post not shwoing

--- a/_posts/2023-06-02-test.md
+++ b/_posts/2023-06-02-test.md
@@ -1,5 +1,12 @@
 ---
 layout: single
 date: "2023-06-01"
-title:  "Welcome to Jekyll!"
+title:  "Welcome to Jekyll! 2"
+permalink: /blog/test-2
 ---
+
+# Welcome 2
+
+**Hello world**, this is my first Jekyll blog post.
+
+I hope you like it!
