--- a/journal/_posts/2020-06-19-05.md
+++ b/journal/_posts/2020-06-19-05.md
@@ -4,14 +4,10 @@ layout: single
 tags:
   - metawriting
 title: It's gonna be a long, long time 🎵
+header:
+  overlay_image: assets/images/nasa-unsplash.jpg
+  caption: "astronaut in spacesuit floating in space. Photo by [**NASA**](https://unsplash.com/@nasa)"
 ---
-
-
-<Thumbnail
-   src="blog/images/nasa-unsplash.jpg"
-   alt="astronaut in spacesuit floating in space"
-   author={{ name: "NASA" , href: "https://unsplash.com/@nasa" }}
-/>
 
 You all remember well when I said I would try to write every single day for 60 days, right? **I bring some news: it's hard.**
 
