--- a/journal/_posts/2023-06-03-07.md
+++ b/journal/_posts/2023-06-03-07.md
@@ -3,6 +3,9 @@ date: "2023-06-03"
 layout: single
 tags:
   - interpretability
+  - machine learning
+  - research
+  - subspace
 title: A new hope!
 ---
 
@@ -81,4 +84,6 @@ I think also that replacing the original gradient for something like SmoothGrad 
 ## Outro
 
 I should definitely use this for explaining self-supervised methods, but maybe checking the literature on interpreting these things is also important. Possibly there is something on NLP or even StableDiffusion interpretation.
+
+Also, Lima-san commented on performing a feature watching during training for these interpretability maps. This is already in my plans, but I still need to finish implementing it and setting an option to watch only a sample of the dataset.
 
