--- a/journal/_posts/2023-06-03-07.md
+++ b/journal/_posts/2023-06-03-07.md
@@ -54,15 +54,15 @@ The fact I didn't notice before is that consistency is well defined directly fro
 
 ### Definition 1: Explanation
 
-Let $X \in \mathbb{R}^{C \times H \times W}$ be an image and $f: \mathbb{R}^{C \times H \times W} \rightarrow \mathbb{R}^{n}$ a classification model. If $M \in \mathbb{Z}_2^{H \times W}$ is a binary mask and $S = X \cdot M$ is a masked subset of the input, then the explanation $E(f | X)$ is the **minimal non-trivial subset which maintains the output**
+Let $X \in \mathbb{R}^{C \times H \times W}$ be an image and $f: \mathbb{R}^{C \times H \times W} \rightarrow \mathbb{R}^{n}$ a classification model. If $M \in \mathbb{Z}_2^{H \times W}$ is a binary mask and $S = X \cdot M$ is a masked subset of the input, then the explanation $E(f \vert X)$ is the **minimal non-trivial subset which maintains the output**
 
-$$ E(f|X) = \min_{|S|}{S} : f(X) = f(S)  & |𝑆| > 0  $$
+$$ E(f \vert X) = \min_{|S|}{S} : f(X) = f(S) \; \& \; |S| > 0  $$
 
 ### Idea: Consistency metric
 
 Given #definition 1, it follows that the best explanation is the one that is closest to the original output and has the minimal amount of non-masked entries.
 
-$$ C(E(f|X)) = |f(E) - f(X)| / |S| $$
+$$ C(E(f \vert X)) = \dfrac{|f(E) - f(X)|}{|S|} $$
 
 Of course some things have to be adjusted in case the function outputs a class (make a == comparison instead), but thinking in terms of the representation vector or probability vector, I think this might be useful for comparing ROSA and Occlusion respectively.
 
