--- a/journal/_posts/2023-06-04-08.md
+++ b/journal/_posts/2023-06-04-08.md
@@ -9,4 +9,4 @@ It still astonishes me when the ground shakes. It happens quite frequently, so m
 
 It has been 8 months I've been here, and I come to think how much I yet have to experience. I don't know if there will be time, if there will ever be time. The fact it amazes me so much also leads me to think how much time do I wish to stay here. Once I told myself 10 years would be good, but that is so much time, and yet insufficient.
 
-I don't have much to say, in the end. Just that it still astonishes me when the ground shakes.
+I don't have much to say, in the end. Just that, for now, it still astonishes me when the ground shakes.
