finally mathjax bug fixed

--- a/journal/_posts/2023-06-03-07.md
+++ b/journal/_posts/2023-06-03-07.md
@@ -54,7 +54,7 @@ The fact I didn't notice before is that consistency is well defined directly fro
 
 ### Definition 1: Explanation
 
-Let \\( X \in \mathbb{R}^{C \times H \times W} \\) be an image and \(f: \mathbb{R}^{C \times H \times W} \rightarrow \mathbb{R}^{n}\) a classification model. If \(M \in \mathbb{Z}_2^{H \times W}\) is a binary mask and \(S = X \cdot M\) is a masked subset of the input, then the explanation \(E(f \vert X)\) is the **minimal non-trivial subset which maintains the output**
+Let \\( X \in \mathbb{R}^{C \times H \times W} \\) be an image and \\(f: \mathbb{R}^{C \times H \times W} \rightarrow \mathbb{R}^{n}\\) a classification model. If \\(M \in \mathbb{Z}_2^{H \times W}\\) is a binary mask and \\(S = X \cdot M\\) is a masked subset of the input, then the explanation \\(E(f \vert X)\\) is the **minimal non-trivial subset which maintains the output**
 
 $$ E(f \vert X) = \min_{|S|}{S} : f(X) = f(S) \; \& \; |S| > 0  $$
 
