updated new post

--- a/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
+++ b/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
@@ -1,18 +1,12 @@
 ---
-title: Python list comprehensions and map, filter and reduce
-headline: Learning python list comprehensions with map, filter and reduce
-date: '2020-08-29'
-description: filter, map and reduce are common functional programming patterns that are available in python as builtin functions. However, list comprehensions get us the same results with less lines of code and enhanced readability, making it a necessary pythonic skill.
-language: english
-category: post
-thumbnail:
-  src: ../../images/birds-eye-view-photography-beach.jpg
-  alt: bird's eye-view photography beach
-  author:
-    name: Shifaaz Shamoon
-    href: https://unsplash.com/@sotti
-github: https://github.com/phvv-me/python-functional-comprehensions.git
-keywords:
+header:
+  overlay_image: assets/images/birds-eye-view-photography-beach.jpg
+  image_description: bird's eye-view photography beach
+  caption: "Photo by [**Shifaaz Shamoon**](https://unsplash.com/@sotti)"
+  actions:
+    - label: "Github"
+      url: "https://github.com/phvv-me/python-functional-comprehensions.git"
+tags:
   - python
   - list comprehensions
   - map
@@ -20,7 +14,10 @@ keywords:
   - reduce
   - walrus operator
   - functional programming
+title: Python list comprehensions and map, filter and reduce
 ---
+
+# Learning python list comprehensions with map, filter and reduce
 
 Several languages have a well known set of methods in their arrays and iterators structures. These methods are `filter`, `map`, and `reduce` and they are usually classified as a functional programming pattern.
 
