using webp images

--- a/journal/_posts/2020-06-19-05.md
+++ b/journal/_posts/2020-06-19-05.md
@@ -3,7 +3,7 @@ layout: single
 tags:
 title: It's gonna be a long, long time 🎵
 header:
-  overlay_image: assets/images/nasa-unsplash.jpg
+  overlay_image: assets/webp/nasa-unsplash.webp
   image_description: astronaut in spacesuit floating in space
   caption: "Photo by [**NASA**](https://unsplash.com/@nasa)"
 ---
