--- a/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
+++ b/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
@@ -1,6 +1,6 @@
 ---
 header:
-  overlay_image: assets/images/birds-eye-view-photography-beach.jpg
+  overlay_image: assets/webp/birds-eye-view-photography-beach.webp
   image_description: bird's eye-view photography beach
   caption: "Photo by [**Shifaaz Shamoon**](https://unsplash.com/@sotti)"
   actions:
