--- a/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
+++ b/posts/programming/_posts/python-functional-comprehensions/2020-08-29-en-us.md
@@ -1,4 +1,5 @@
 ---
+classes: wide
 header:
   overlay_image: assets/webp/birds-eye-view-photography-beach.webp
   image_description: bird's eye-view photography beach
