--- a/journal/_posts/2023-06-03-07.md
+++ b/journal/_posts/2023-06-03-07.md
@@ -60,7 +60,7 @@ $$ E(f \vert X) = \min_{|S|}{S} : f(X) = f(S) \; \& \; |S| > 0  $$
 
 Given #definition 1, it follows that the best explanation is the one that is closest to the original output and has the minimal amount of non-masked entries.
 
-$$ C(E(f \vert X)) = \dfrac{|f(E) - f(X)|}{|S|} $$
+$$ C(E(f \vert X)) = \dfrac{1}{|f(E) - f(X)||S|} $$
 
 Of course some things have to be adjusted in case the function outputs a class (make a == comparison instead), but thinking in terms of the representation vector or probability vector, I think this might be useful for comparing ROSA and Occlusion respectively.
 
