medium link added

--- a/posts/programming/python-functional-comprehensions/2020-08-29-en-us.md
+++ b/posts/programming/python-functional-comprehensions/2020-08-29-en-us.md
@@ -20,11 +20,31 @@ title: Python list comprehensions and map, filter and reduce
 
 # Learning python list comprehensions with map, filter and reduce
 
-Several languages have a well known set of methods in their arrays and iterators structures. These methods are `filter`, `map`, and `reduce` and they are usually classified as a functional programming pattern.
+## TL;DR:
 
-Python does not implement it as methods, but [has them as builtins](https://docs.python.org/3/library/functions.html) though.Strangely seldom it is we see them being used. Why? Because python offers a much more readable method to perform those operations: list comprehensions.
+The article showcases how Python's list comprehensions can effectively replace `map`, `filter`, and `reduce` functions, enhancing code readability and efficiency. It explains list comprehensions with examples for filtering, mapping, and reducing list items, emphasizing their simplicity and power in Python programming.
+
+1. Filter
+```python
+names_starting_with_a = [name for name in all_names if name.startswith("A")]
+```
+2. Map
+```python
+all_initials = [name[0] + '.' for name in all_names]
+```
+3. Reduce
+```python
+sum_of_ages = 0
+accumulated_ages = [sum_of_ages := sum_of_ages + age for age in all_ages]
+```
+
+---
 
 ## What are list comprehensions
+
+Several languages have a well known set of methods in their arrays and iterators structures. These methods are `filter`, `map`, and `reduce` and they are usually classified as a functional programming pattern.
+
+Python does not implement it as methods, but [has them as builtins](https://docs.python.org/3/library/functions.html) though. Strangely seldom it is we see them being used. Why? Because python offers a much more readable method to perform those operations: list comprehensions.
 
 ### How to `filter()` with list comprehensions
 
