youtube embed added

--- a/_posts/2024-12-08-02.md
+++ b/_posts/2024-12-08-02.md
@@ -5,14 +5,14 @@ tags:
 title: My 5-Minute New Year Resolution Experiment to make 2025 Special
 ---
 
-![Video](https://youtu.be/sLkAfhfOQXU)
-
 As we approach the end of another year, it becomes customary to reflect on what we have accomplished. The weight of expectation we place on our shoulders can often feel heavier than the world itself. I know I feel anxious when asked about yearly achievements, but this time I want to try and find genuine fulfillment.
 
 Instead of getting lost in long-term goals that might seem unreachable, start considering what you want to achieve in a day. Daily intentions ground you, providing a sense of control and accomplishment. For example, what tasks must you complete today? 
 And then, what about the week ahead? And the month? And then finally the year?
 
 Understanding that your year is an accumulation of daily actions can change your perspective. It shifts the focus from far-off dreams to immediate, achievable things. For me, I want to grow my YouTube channel this year, and I was thinking I would like to have 1000 subscribers, but this is not the right focus. This is not **controllable** and neither something doable in a single day. That's why I will be focusing on **consistency**, on creating content at a steady pace. Control what you can: your output and efforts.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sLkAfhfOQXU?si=CrHYT1kN9ypGMRKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ### Incremental Progress
 
